--- a/index.html
+++ b/index.html
@@ -3,39 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tarjeta Regalo JoJo</title>
+    <title>¿Eres verdaderamente merecedor...?</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-    <div class="menacing" style="top: 10px; left: 10px;">ゴゴゴ</div>
-    <div class="menacing" style="bottom: 20px; right: 20px;">ゴゴゴ</div>
+    <div class="menacing" style="top: 10px; left: 10px;">ゴゴゴゴゴゴゴゴゴ</div>
+    <div class="menacing" style="bottom: 20px; right: 20px;">ゴゴゴゴゴゴゴゴゴ</div>
 
     <div class="container">
-        <h1 class="jojo-title">✨ Tarjeta Regalo JoJo ✨</h1>
+        <h1 class="jojo-title">ゴ¿Eres verdaderamente merecedor...?ゴ</h1>
 
-        <div class="question active" id="q1">
-            <p>Pregunta 1: (edítala tú)</p>
-            <input type="text" id="a1">
-            <button onclick="nextQuestion(1)">Responder</button>
-        </div>
+       <div class="question active" id="q1">
+    <p>¿Speedwagoon best waifu?</p>
+    <div class="options">
+        <button onclick="nextQuestion(1)">Sí</button>
+        <button onclick="nextQuestion(1)">No</button>
+    </div>
+</div>
+
 
         <div class="question" id="q2">
-            <p>Pregunta 2: (edítala tú)</p>
-            <input type="text" id="a2">
-            <button onclick="nextQuestion(2)">Responder</button>
-        </div>
+    <p>Que servilleta cogerias</p>
+    <div class="options">
+        <button onclick="nextQuestion(2)">Izquierda</button>
+        <button onclick="nextQuestion(2)">Derecha</button>
+        <button onclick="nextQuestion(2)">Lo importante es cogerla el primero</button>
+    </div>
+</div>
 
-        <div class="question" id="q3">
-            <p>Pregunta 3: (edítala tú)</p>
-            <input type="text" id="a3">
-            <button onclick="nextQuestion(3)">Responder</button>
-        </div>
+<div class="question" id="q3">
+    <p>Dirías que Polnareff se lo pasó bien en la India</p>
+    <div class="options">
+        <button onclick="nextQuestion(3)">Sí</button>
+        <button onclick="nextQuestion(3)">No</button>
+    </div>
+</div>
+
 
         <div id="regalo">
-            🎁✨ ¡Has llegado al final! ✨🎁 <br><br>
-            ⭐ Tu regalo es el tatuaje de la estrella de los JoJo’s ⭐  
+           ゴ Ehnorabuena eres merecedor de la marca de los Joestarsゴ <br><br>
             <br><br>
             <button id="oraButton" class="ora-btn">ORA ORA ORA</button>
         </div>
