--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <body>
 
-    <div class="menacing" style="top: 10px; left: 10px;">ゴゴゴゴゴゴゴゴゴ</div>
-    <div class="menacing" style="bottom: 20px; right: 20px;">ゴゴゴゴゴゴゴゴゴ</div>
+    <div class="menacing" style="top: 10px; left: 10px;">ゴゴゴゴゴゴゴゴゴゴゴ</div>
+    <div class="menacing" style="bottom: 20px; right: 20px;">ゴゴゴゴゴゴゴゴゴゴゴ</div>
 
     <div class="container">
         <h1 class="jojo-title">ゴ¿Eres verdaderamente merecedor...?ゴ</h1>
