--- a/index.html
+++ b/index.html
@@ -9,43 +9,43 @@
 
 <body>
 
-    <div class="menacing" style="top: 10px; left: 10px;">ゴゴゴゴゴゴゴゴゴゴゴ</div>
-    <div class="menacing" style="bottom: 20px; right: 20px;">ゴゴゴゴゴゴゴゴゴゴゴ</div>
+    <div class="menacing" style="top: 10px; left: 10px;">ゴゴゴゴゴゴゴゴゴゴ</div>
+    <div class="menacing" style="bottom: 20px; right: 20px;">ゴゴゴゴゴゴゴゴゴゴ</div>
 
     <div class="container">
         <h1 class="jojo-title">ゴ¿Eres verdaderamente merecedor...?ゴ</h1>
 
-       <div class="question active" id="q1">
-    <p>¿Speedwagoon best waifu?</p>
-    <div class="options">
-        <button onclick="nextQuestion(1)">Sí</button>
-        <button onclick="nextQuestion(1)">No</button>
-    </div>
-</div>
-
+        <div class="question active" id="q1">
+            <p>¿Speedwagoon best waifu?</p>
+            <div class="options">
+                <button onclick="nextQuestion(1)">Sí</button>
+                <button onclick="nextQuestion(1)">No</button>
+            </div>
+        </div>
 
         <div class="question" id="q2">
-    <p>Que servilleta cogerias</p>
-    <div class="options">
-        <button onclick="nextQuestion(2)">Izquierda</button>
-        <button onclick="nextQuestion(2)">Derecha</button>
-        <button onclick="nextQuestion(2)">Lo importante es cogerla el primero</button>
-    </div>
-</div>
+            <p>¿Qué servilleta cogerías?</p>
+            <div class="options">
+                <button onclick="nextQuestion(2)">Izquierda</button>
+                <button onclick="nextQuestion(2)">Derecha</button>
+                <button onclick="nextQuestion(2)">Lo importante es cogerla el primero</button>
+            </div>
+        </div>
 
-<div class="question" id="q3">
-    <p>Dirías que Polnareff se lo pasó bien en la India</p>
-    <div class="options">
-        <button onclick="nextQuestion(3)">Sí</button>
-        <button onclick="nextQuestion(3)">No</button>
-    </div>
-</div>
-
+        <div class="question" id="q3">
+            <p>¿Dirías que Polnareff se lo pasó bien en la India?</p>
+            <div class="options">
+                <button onclick="nextQuestion(3)">Sí</button>
+                <button onclick="nextQuestion(3)">No</button>
+            </div>
+        </div>
 
         <div id="regalo">
-           ゴ Ehnorabuena eres merecedor de la marca de los Joestarsゴ <br><br>
+            ゴ ¡Enhorabuena, eres merecedor de la marca de los Joestars! ゴ
             <br><br>
             <button id="oraButton" class="ora-btn">ORA ORA ORA</button>
+            <button id="josukeButton" class="ora-btn">OI JOSUKE</button>
+
         </div>
     </div>
 
