--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <body>
 
-    <div class="menacing" style="top: 10px; left: 10px;">ゴゴゴゴゴゴゴゴゴゴ</div>
-    <div class="menacing" style="bottom: 20px; right: 20px;">ゴゴゴゴゴゴゴゴゴゴ</div>
+    <div class="menacing" style="top: 10px; left: 10px;">ゴゴゴゴゴゴゴ</div>
+    <div class="menacing" style="bottom: 20px; right: 20px;">ゴゴゴゴゴゴゴ</div>
 
     <div class="container">
         <h1 class="jojo-title">ゴ¿Eres verdaderamente merecedor...?ゴ</h1>
@@ -44,8 +44,6 @@
             ゴ ¡Enhorabuena, eres merecedor de la marca de los Joestars! ゴ
             <br><br>
             <button id="oraButton" class="ora-btn">ORA ORA ORA</button>
-            <button id="josukeButton" class="ora-btn">OI JOSUKE</button>
-
         </div>
     </div>
 
